--- a/.github/workflows/tls-monitoring.yml
+++ b/.github/workflows/tls-monitoring.yml
@@ -32,7 +32,7 @@ jobs:
         continue-on-error: true
       
       - name: Create GitHub Issue on certificate alert
-        if: failure()
+        if: steps.monitor.outcome == 'failure'
         uses: actions/github-script@v7
         with:
           script: |
