Add permissions for issue creation

--- a/.github/workflows/tls-monitoring.yml
+++ b/.github/workflows/tls-monitoring.yml
@@ -8,6 +8,9 @@ on:
   # Allow manual trigger
   workflow_dispatch:
 
+permissions:
+  issues: write
+
 jobs:
   monitor-certificates:
     runs-on: ubuntu-latest
