--- a/.github/workflows/tls-monitoring.yml
+++ b/.github/workflows/tls-monitoring.yml
@@ -35,7 +35,7 @@ jobs:
           python main.py > /tmp/monitor_output.txt 2>&1
           EXIT_CODE=$?
           echo "exit_code=${EXIT_CODE}" >> $GITHUB_OUTPUT
-          exit 0
+          exit $EXIT_CODE
         continue-on-error: true
       
       - name: Parse alerts and create issues
