--- a/.github/workflows/tls-monitoring.yml
+++ b/.github/workflows/tls-monitoring.yml
@@ -31,56 +31,21 @@ jobs:
       
       - name: Run TLS monitoring script
         id: monitor
-        run: |
-          python main.py > /tmp/monitor_output.txt 2>&1
-          EXIT_CODE=$?
-          echo "exit_code=${EXIT_CODE}" >> $GITHUB_OUTPUT
-          exit $EXIT_CODE
+        run: python main.py
         continue-on-error: true
       
-      - name: Parse alerts and create issues
+      - name: Extract alerts and create issues
         if: always()
         uses: actions/github-script@v7
         with:
           script: |
-            const fs = require('fs');
+            const alerts = ${{ steps.monitor.outputs.alerts || '[]' }};
+            console.log(`Found ${alerts.length} alert(s)`);
             
-            // Get exit code from step output
-            const exitCode = parseInt('${{ steps.monitor.outputs.exit_code }}' || '0');
-            console.log(`Script exit code: ${exitCode}`);
-            
-            // Only proceed if script failed (exit code 1)
-            if (exitCode !== 1) {
-              console.log('No alerts detected, skipping issue creation');
+            if (alerts.length === 0) {
+              console.log('No alerts to process');
               return;
             }
-            
-            // Read workflow output
-            let output = '';
-            try {
-              output = fs.readFileSync('/tmp/monitor_output.txt', 'utf8');
-            } catch (err) {
-              console.log('Could not read output file, creating generic issue');
-            }
-            
-            console.log('Script output:', output);
-            
-            // Extract JSON alerts from output (look for ::set-output line)
-            const alertsMatch = output.match(/::set-output name=alerts::(.*)/);
-            if (!alertsMatch) {
-              console.log('No alerts found in output, creating generic issue');
-              await github.rest.issues.create({
-                owner: context.repo.owner,
-                repo: context.repo.repo,
-                title: '⚠️ Certificate Monitoring Alert',
-                body: `## TLS Certificate Alert\n\nThe certificate monitoring detected issues.\n\n**Details:**\n- Repository: [${context.repo.repo}](${context.server_url}/${context.repo.owner}/${context.repo.repo})\n- Triggered: ${new Date().toISOString()}\n- Workflow: [View Logs](${context.server_url}/${context.repo.owner}/${context.repo.repo}/actions/runs/${context.runId})\n\nCheck the logs for details.`,
-                labels: ['security', 'certificate-alert']
-              });
-              return;
-            }
-            
-            const alerts = JSON.parse(alertsMatch[1]);
-            console.log(`Found ${alerts.length} alert(s) to process`);
             
             // Create an issue for each failing domain
             for (const alert of alerts) {
@@ -91,8 +56,7 @@ jobs:
                 body += `**Error:** ${alert.error}\n\n`;
               } else {
                 body += `**Expiration Date:** ${alert.expires_at ? new Date(alert.expires_at).toLocaleDateString() : 'Unknown'}\n`;
-                body += `**Days Remaining:** ${alert.days_remaining}\n`;
-                body += `**Threshold:** 50 days\n\n`;
+                body += `**Days Remaining:** ${alert.days_remaining}\n\n`;
               }
               
               body += `**Details:**\n`;
