--- a/.github/workflows/tls-monitoring.yml
+++ b/.github/workflows/tls-monitoring.yml
@@ -24,6 +24,11 @@ jobs:
         with:
           python-version: '3.9'
       
+      - name: Install CA certificates
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y ca-certificates
+      
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
