--- a/.github/workflows/tls-monitoring.yml
+++ b/.github/workflows/tls-monitoring.yml
@@ -38,6 +38,10 @@ jobs:
       
       - name: Run TLS monitoring script
         id: monitor
+        env:
+          MONITOR_DOMAINS: ${{ secrets.MONITOR_DOMAINS }}
+          CERT_EXPIRATION_THRESHOLD_DAYS: ${{ secrets.CERT_EXPIRATION_THRESHOLD_DAYS || '30' }}
+          ALERT_EMAILS: ${{ secrets.ALERT_EMAILS }}
         run: python main.py
         continue-on-error: true
       
