Add command-line argument support, clean .env, simplify config priority

--- a/.env
+++ b/.env
@@ -1,11 +1,3 @@
-# Comma-separated list of domains to monitor
-MONITOR_DOMAINS=brattlecameron.com,example.com
-
-# Certificate expiration threshold in days (default: 30)
-CERT_EXPIRATION_THRESHOLD_DAYS=5000
-
-# Comma-separated list of email addresses to alert (displayed in GitHub Issue)
-ALERT_EMAILS=sergio.troiano@iwgplc.com
-
-# Debug mode - set to true to show detailed debug output (default: false)
-DEBUG=false
+# TLS Certificate Monitoring Configuration
+# Leave empty - use command-line arguments or environment variables instead
+# See README.md for setup instructions
