Add unit tests and CI/CD testing workflow

--- a/.env
+++ b/.env
@@ -1,3 +1,10 @@
 # TLS Certificate Monitoring Configuration
-# Leave empty - use command-line arguments or environment variables instead
-# See README.md for setup instructions
+# Use command-line arguments for best practice: --domains "domain1,domain2" --threshold 5000
+# Or set these environment variables as fallback
+
+# Domains to monitor (comma-separated, optional with runbook URLs)
+# Format: domain1,domain2:https://runbook.url,domain3
+MONITOR_DOMAINS=brattlecameron.com,incendiumconsulting.com,instantoffices.com,theinstantgroup.com
+
+# Certificate expiry threshold in days (default: 5000)
+THRESHOLD_DAYS=5000
