Use .env file as fallback when MONITOR_DOMAINS secret not set

--- a/.github/workflows/tls-monitoring.yml
+++ b/.github/workflows/tls-monitoring.yml
@@ -38,7 +38,14 @@ jobs:
       
       - name: Run TLS monitoring script
         id: monitor
-        run: python main.py --domains "${{ secrets.MONITOR_DOMAINS }}" --threshold 5000
+        run: |
+          # Use secret if provided, otherwise use .env file
+          DOMAINS="${{ secrets.MONITOR_DOMAINS }}"
+          if [ -z "$DOMAINS" ]; then
+            python main.py --threshold 5000
+          else
+            python main.py --domains "$DOMAINS" --threshold 5000
+          fi
         continue-on-error: true
       
       - name: Extract alerts and create issues
