Add easyoffices.com and coworker.com to domain monitoring list

--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@
 
 # Domains to monitor (comma-separated, optional with runbook URLs)
 # Format: domain1,domain2:https://runbook.url,domain3
-MONITOR_DOMAINS=brattlecameron.com,incendiumconsulting.com,instantoffices.com,theinstantgroup.com
+MONITOR_DOMAINS=brattlecameron.com,incendiumconsulting.com,instantoffices.com,theinstantgroup.com,worka.tech,worka.com,theinstantgroup.tech,coworkintel.com,coworkintel.tech,easyoffices.com,coworker.com
 
-# Certificate expiry threshold in days (default: 5000)
-THRESHOLD_DAYS=5000
+# Certificate expiry threshold in days (default: 30)
+THRESHOLD_DAYS=30
